# Tourly_Travel_Website

./: .gitignore  pyproject.toml
backend/: manage.py
backend/authapi/: admin.py  models.py
backend/backend/: settings.py  urls.py
backend/core/: admin.py  models.py  serializers.py  urls.py  views.py
client/: package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
client/app/: globals.css  layout.jsx  layout.tsx  page.tsx
client/app/(auth)/sign-up/: page.jsx
client/app/(root)/: page.jsx
client/app/(root)/tourpackage/: page.jsx
client/app/aboutus/: page.tsx
client/app/admin/: AdminDashboard.jsx
client/app/allblogs/: page.tsx
client/app/authenticate/: page.tsx
client/app/blogdetails/: page.tsx
client/app/contact/: page.tsx
client/app/serviceProvider/: ServiceProviderDashboard.jsx
client/app/traveler/: TravelerDashboard.jsx
client/components/: Footer.tsx  Header.jsx  index.js
client/components/containers/: Banner.jsx  Blog.jsx  Categories.jsx  Destination.jsx  Guides.jsx  Recentpost.jsx  Service.jsx
client/components/containers/Admin/: AnalyticsDashboard.jsx  ManageContent.jsx  ManagePromotions.jsx  ManageReviews.jsx
client/components/containers/ServiceProvider/: ManageListings.jsx  SPAnalyticsDashboard.jsx  SPAvailabilityDashboard.jsx  SPDashboard.jsx  SPPromotionsDashboard.jsx  ServiceListingSubmission.jsx
client/containers/: About.tsx  Blogtags.tsx  Booking.tsx  Gallary.tsx  Package.tsx  Singleblog.tsx  Testimonial.tsx  index.ts
frontend/: package-lock.json
frontend/app/: page.jsx
(+4 files in other folders)
